methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:25: error: not found: value faireV
    faireV()
    ^