methods.picture.PictureMono2.scala.code
def faireMotif() {
  avance()
  avance()
  baisseBrosse()
  leveBrosse()
  avance()
  gauche()
  avance()
  baisseBrosse()
  leveBrosse()
  recule()
  droite()
  avance()
  baisseBrosse()
  leveBrosse()
  avance()
  avance()
  gauche()
  
}

override def run {

  for(i<-1 to 4) {
    faireV()
  }
}